# MiniMestre

./: .env  .gitignore  README.md  alunos.py  aulas.py  drive_integration.py  gui.py  main.py  pyproject.toml  readme_old.md  requirements.txt  settings.yaml  utils.py
scripts/: run-cli.ps1  run-gui.ps1
src/unimestre/cli/: main.py
src/unimestre/config/: settings.yaml
src/unimestre/core/: __init__.py  alunos.py  aulas.py
src/unimestre/gui/: app.py
src/unimestre/infra/: __init__.py  drive.py
src/unimestre/shared/: __init__.py  utils.py
