[project]
name = "unimestre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydrive>=1.3.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
unimestre-cli = "unimestre.cli.main:menu"
unimestre-gui = "unimestre.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
